// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compare localfile-spooldd handler process method should compare a local-file and a spool-dd in terminal 1`] = `
Object {
  "apiResponse": Object {},
  "commandResponse": "compared string",
  "success": true,
}
`;

exports[`Compare localfile-spooldd handler process method should compare a local-file and a spool-dd in terminal with --context-lines option 1`] = `
Object {
  "apiResponse": Object {},
  "commandResponse": "compared string",
  "success": true,
}
`;

exports[`Compare localfile-spooldd handler process method should compare a local-file and a spool-dd in terminal with --seqnum specified 1`] = `
Object {
  "apiResponse": Object {},
  "commandResponse": "compared12345678",
  "success": true,
}
`;
